--- a/index.html
+++ b/index.html
@@ -9,21 +9,53 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+    <!-- NAVABR -->
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand">Minta</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myTarget">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="myTarget">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Colorado</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Juicy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Wellness</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Production Frameworks</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <!-- SHOWCASE -->
     <div class="main-content-bg bg-secondary bg-gradient text-white py-5">
         <div class="container ">
             <div class="row my-5">
-                <div class="showcase col-xs-12 col-md-6 text-center text-lg-start">
-                    <h3 class="heading">We Are</h3>
+                <div class="showcase col-xs-12 col-md-6 text-center text-lg-start mb-5">
+                    <h3 class="heading" style="color: rgb(245, 135, 253)">We Are</h3>
                     <h4>Solved in the lounge</h4>
                     <p class="fs-5 fw-light lh-sm fst-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Accusantium cupiditate tenetur dignissimos. Quia, commodi laudantium!</p>
                 </div>
     
                 <div class="showcase col-xs-12 col-md-6 text-center">
-                    <h3 class="text-capitalize heading">You will find out</h3>
+                    <h3 class="text-capitalize heading" style="color: rgb(245, 135, 253)">You will find out</h3>
                     <div class="d-flex justify-content-between">
-                            <div class="card mb-3 mx-2 w-100"> 
+                            <div class="card mb-3 mx-2 w-100">
+                                <div class="card-header text-success">
+                                    Cramp up
+                                </div>
                                     <ul class="list-group list-group-flush">
                                     <li class="list-group-item">Everything Programs</li>
                                     <li class="list-group-item">Integrating Platforms</li>
@@ -33,7 +65,10 @@
                                 </ul>
                             </div>
             
-                            <div class="card mb-3 mx-2 w-100"> 
+                            <div class="card mb-3 mx-2 w-100">
+                                <div class="card-header text-success">
+                                    Cramp up
+                                </div> 
                                     <ul class="list-group list-group-flush">
                                     <li class="list-group-item">Everything Programs</li>
                                     <li class="list-group-item">Integrating Platforms</li>
@@ -52,33 +87,53 @@
     <div class="main-content-cards py-5 my-5">
         <div class="container">
             <div class="row ">
-                <div class="section p-3 col-xs-12 col-sm-6 col-lg-3 text-center text-lg-start">
-                    <h3 class="px-3">Motivation</h3>
-                    <p class="py-2 px-3 bg-secondary text-light mb-0">Investors Decision and Rhythm</p>
-                    <p class="bg-light px-3 py-4 lh-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus 
-                        facere laborum rem aspernatur, tenetur porro repellendus eum, 
-                        natus incidunt odit perferendis distinctio voluptate. Sed explicabo tempora magni ea dolorum!</p>
+                <!-- first -->
+                <div class="section col-xs-12 col-sm-6 col-lg-3 text-center text-lg-start">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title px-3">Motivation</h3>
+                            <p class="card-subtitle py-2 px-3 bg-secondary text-light mb-0">Investors Decision and Rhythm</p>
+                            <p class="card-text bg-light px-3 py-4 lh-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus 
+                                facere laborum rem aspernatur, tenetur porro repellendus eum, 
+                                natus incidunt odit perferendis distinctio voluptate. Sed explicabo tempora magni ea dolorum!</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="section p-3 col-xs-12 col-sm-6 col-lg-3 text-center text-lg-start">
-                    <h3 class="px-3">Motivation</h3>
-                    <p class="py-2 px-3 bg-secondary text-light mb-0">Investors Decision and Rhythm</p>
-                    <p class="bg-light px-3 py-4 lh-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus 
-                        facere laborum rem aspernatur, tenetur porro repellendus eum, 
-                        natus incidunt odit perferendis distinctio voluptate. Sed explicabo tempora magni ea dolorum!</p>
+                <!-- second -->
+                <div class="section col-xs-12 col-sm-6 col-lg-3 text-center text-lg-start">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title px-3">Motivation</h3>
+                            <p class="card-subtitle py-2 px-3 bg-secondary text-light mb-0">Investors Decision and Rhythm</p>
+                            <p class="card-text bg-light px-3 py-4 lh-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus 
+                                facere laborum rem aspernatur, tenetur porro repellendus eum, 
+                                natus incidunt odit perferendis distinctio voluptate. Sed explicabo tempora magni ea dolorum!</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="section p-3 col-xs-12 col-sm-6 col-lg-3 text-center text-lg-start">
-                    <h3 class="px-3">Motivation</h3>
-                    <p class="py-2 px-3 bg-secondary text-light mb-0">Investors Decision and Rhythm</p>
-                    <p class="bg-light px-3 py-4 lh-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus 
-                        facere laborum rem aspernatur, tenetur porro repellendus eum, 
-                        natus incidunt odit perferendis distinctio voluptate. Sed explicabo tempora magni ea dolorum!</p>
+                <!-- third -->
+                <div class="section col-xs-12 col-sm-6 col-lg-3 text-center text-lg-start">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title px-3">Motivation</h3>
+                            <p class="card-subtitle py-2 px-3 bg-secondary text-light mb-0">Investors Decision and Rhythm</p>
+                            <p class="card-text bg-light px-3 py-4 lh-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus 
+                                facere laborum rem aspernatur, tenetur porro repellendus eum, 
+                                natus incidunt odit perferendis distinctio voluptate. Sed explicabo tempora magni ea dolorum!</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="section p-3 col-xs-12 col-sm-6 col-lg-3 text-center text-lg-start">
-                    <h3 class="px-3">Motivation</h3>
-                    <p class="py-2 px-3 bg-secondary text-light mb-0">Investors Decision and Rhythm</p>
-                    <p class="bg-light px-3 py-4 lh-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus 
-                        facere laborum rem aspernatur, tenetur porro repellendus eum, 
-                        natus incidunt odit perferendis distinctio voluptate. Sed explicabo tempora magni ea dolorum!</p>
+                <!-- fourth -->
+                <div class="section col-xs-12 col-sm-6 col-lg-3 text-center text-lg-start">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title px-3">Motivation</h3>
+                            <p class="card-subtitle py-2 px-3 bg-secondary text-light mb-0">Investors Decision and Rhythm</p>
+                            <p class="card-text bg-light px-3 py-4 lh-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus 
+                                facere laborum rem aspernatur, tenetur porro repellendus eum, 
+                                natus incidunt odit perferendis distinctio voluptate. Sed explicabo tempora magni ea dolorum!</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -88,24 +143,24 @@
     <div class="container">
         <div class="row mb-5 gy-5">
             <!-- COL-1 -->
-            <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="col-xs-12 col-md-6 col-lg-4 mb-3">
                 <div class="card">
-                    <img src="https://picsum.photos/200" class="card-img-top" alt="Random Images">
-                    <div class="card-body">
-                      <h5 class="card-title">Our Commitment</h5>
-                      <h6 class="card-subtitle mb-2 text-muted">We believe in you</h6>
-                      <p class="card-text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem odio officia libero. 
-                        Delectus, repellendus? Nisi esse magni similique veniam, 
-                        accusantium ducimus iusto aliquid et ex dolor autem, est commodi ratione neque. Deserunt soluta molestiae itaque beatae?
-                      </p>
-                      <a href="#" class="btn btn-success">Join Us</a>
-                    </div>
+                        <img src="https://picsum.photos/200" class="card-img-top" alt="Random Images">
+                        <div class="card-body">
+                            <h5 class="card-title">Our Commitment</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">We believe in you</h6>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem odio officia libero. 
+                                Delectus, repellendus? Nisi esse magni similique veniam, 
+                                accusantium ducimus iusto aliquid et ex dolor autem, est commodi ratione neque. Deserunt soluta molestiae itaque beatae?
+                            </p>
+                            <a href="#" class="btn btn-success">Join Us</a>
+                        </div>
                 </div>
             </div>
 
             <!-- COL-2 -->
-            <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="col-xs-12 col-md-6 col-lg-4 mb-3">
                 <div class="card">
                     <img src="https://picsum.photos/200" class="card-img-top" alt="Random Images">
                     <div class="card-body">
@@ -122,7 +177,7 @@
             </div>
 
             <!-- CLO-3 -->
-            <div class="col-xs-12 col-md-6 col-lg-4 pt-md-5 pt-lg-0">
+            <div class="col-xs-12 col-md-6 col-lg-4 mb-3">
                 <div class="card">
                     <img src="https://picsum.photos/200" class="card-img-top" alt="Random Images">
                     <div class="card-body">
@@ -135,6 +190,29 @@
                       </p>
                       <a href="#" class="btn btn-success">Join Us</a>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="bg-dark text-light py-5">
+        <div class="container">
+            <div class="row py-5 my-5">
+                <div class="col-xs-6 col-lg-3">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta facilis veritatis quas. 
+                    Possimus error laborum quae vitae consequatur aspernatur ad?
+                </div>
+                <div class="col-xs-6 col-lg-3">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta facilis veritatis quas. 
+                    Possimus error laborum quae vitae consequatur aspernatur ad?
+                </div>
+                <div class="col-xs-6 col-lg-3">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta facilis veritatis quas. 
+                    Possimus error laborum quae vitae consequatur aspernatur ad?
+                </div>
+                <div class="col-xs-6 col-lg-3">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta facilis veritatis quas. 
+                    Possimus error laborum quae vitae consequatur aspernatur ad?
                 </div>
             </div>
         </div>
