--- a/index.html
+++ b/index.html
@@ -6,29 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minta | Source - the - Force</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./img/martin-baron-RBmlPdZ13nE-unsplash.jpg">
+    <script src="https://use.fontawesome.com/2c38b88d47.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <!-- NAVABR -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <div class="container-fluid">
+        <div class="container">
             <a href="#" class="navbar-brand">Minta</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myTarget">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="myTarget">
+            <div class="collapse navbar-collapse justify-content-center" id="myTarget">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#" class="nav-link pe-5">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Colorado</a>
+                        <a href="#" class="nav-link pe-5">Colorado</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Juicy</a>
+                        <a href="#" class="nav-link pe-5">Juicy</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Wellness</a>
+                        <a href="#" class="nav-link pe-5">Wellness</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Production Frameworks</a>
@@ -52,7 +54,7 @@
                 <div class="showcase col-xs-12 col-md-6 text-center">
                     <h3 class="text-capitalize heading" style="color: rgb(245, 135, 253)">You will find out</h3>
                     <div class="d-flex justify-content-between">
-                            <div class="card mb-3 mx-2 w-100">
+                            <div class="card mb-3 me-2 w-100">
                                 <div class="card-header text-success">
                                     Cramp up
                                 </div>
@@ -65,7 +67,7 @@
                                 </ul>
                             </div>
             
-                            <div class="card mb-3 mx-2 w-100">
+                            <div class="card mb-3 w-100">
                                 <div class="card-header text-success">
                                     Cramp up
                                 </div> 
@@ -86,13 +88,13 @@
     <!--FOUR CARDS -->
     <div class="main-content-cards py-5 my-5">
         <div class="container">
-            <div class="row ">
+            <div class="row g-3">
                 <!-- first -->
                 <div class="section col-xs-12 col-sm-6 col-lg-3 text-center text-lg-start">
                     <div class="card">
                         <div class="card-body">
                             <h3 class="card-title px-3">Motivation</h3>
-                            <p class="card-subtitle py-2 px-3 bg-secondary text-light mb-0">Investors Decision and Rhythm</p>
+                            <p class="card-subtitle py-2 px-3 bg-secondary mb-0" style="color: rgb(245, 135, 253)">Investors Decision and Rhythm</p>
                             <p class="card-text bg-light px-3 py-4 lh-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus 
                                 facere laborum rem aspernatur, tenetur porro repellendus eum, 
                                 natus incidunt odit perferendis distinctio voluptate. Sed explicabo tempora magni ea dolorum!</p>
@@ -104,7 +106,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h3 class="card-title px-3">Motivation</h3>
-                            <p class="card-subtitle py-2 px-3 bg-secondary text-light mb-0">Investors Decision and Rhythm</p>
+                            <p class="card-subtitle py-2 px-3 bg-secondary mb-0" style="color: rgb(245, 135, 253)">Investors Decision and Rhythm</p>
                             <p class="card-text bg-light px-3 py-4 lh-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus 
                                 facere laborum rem aspernatur, tenetur porro repellendus eum, 
                                 natus incidunt odit perferendis distinctio voluptate. Sed explicabo tempora magni ea dolorum!</p>
@@ -116,7 +118,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h3 class="card-title px-3">Motivation</h3>
-                            <p class="card-subtitle py-2 px-3 bg-secondary text-light mb-0">Investors Decision and Rhythm</p>
+                            <p class="card-subtitle py-2 px-3 bg-secondary mb-0" style="color: rgb(245, 135, 253)">Investors Decision and Rhythm</p>
                             <p class="card-text bg-light px-3 py-4 lh-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus 
                                 facere laborum rem aspernatur, tenetur porro repellendus eum, 
                                 natus incidunt odit perferendis distinctio voluptate. Sed explicabo tempora magni ea dolorum!</p>
@@ -128,7 +130,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h3 class="card-title px-3">Motivation</h3>
-                            <p class="card-subtitle py-2 px-3 bg-secondary text-light mb-0">Investors Decision and Rhythm</p>
+                            <p class="card-subtitle py-2 px-3 bg-secondary mb-0" style="color: rgb(245, 135, 253)">Investors Decision and Rhythm</p>
                             <p class="card-text bg-light px-3 py-4 lh-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus 
                                 facere laborum rem aspernatur, tenetur porro repellendus eum, 
                                 natus incidunt odit perferendis distinctio voluptate. Sed explicabo tempora magni ea dolorum!</p>
@@ -144,10 +146,10 @@
         <div class="row mb-5 gy-5">
             <!-- COL-1 -->
             <div class="col-xs-12 col-md-6 col-lg-4 mb-3">
-                <div class="card">
-                        <img src="https://picsum.photos/200" class="card-img-top" alt="Random Images">
+                    <div class="card">
+                        <img src="./img/martin-baron-RBmlPdZ13nE-unsplash.jpg" class="card-img-top w-100" alt="Random Images">
                         <div class="card-body">
-                            <h5 class="card-title">Our Commitment</h5>
+                            <h5 class="card-title" style="color: rgb(245, 135, 253)">Our Commitment</h5>
                             <h6 class="card-subtitle mb-2 text-muted">We believe in you</h6>
                             <p class="card-text">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem odio officia libero. 
@@ -156,15 +158,15 @@
                             </p>
                             <a href="#" class="btn btn-success">Join Us</a>
                         </div>
-                </div>
+                    </div>
             </div>
 
             <!-- COL-2 -->
             <div class="col-xs-12 col-md-6 col-lg-4 mb-3">
                 <div class="card">
-                    <img src="https://picsum.photos/200" class="card-img-top" alt="Random Images">
+                    <img src="./img/samsung-uk-XooIapRIKwY-unsplash.jpg" class="card-img-top" alt="Random Images">
                     <div class="card-body">
-                      <h5 class="card-title">Our Commitment</h5>
+                      <h5 class="card-title" style="color: rgb(245, 135, 253)">Our Commitment</h5>
                       <h6 class="card-subtitle mb-2 text-muted">We believe in you</h6>
                       <p class="card-text">
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem odio officia libero. 
@@ -179,9 +181,9 @@
             <!-- CLO-3 -->
             <div class="col-xs-12 col-md-6 col-lg-4 mb-3">
                 <div class="card">
-                    <img src="https://picsum.photos/200" class="card-img-top" alt="Random Images">
+                    <img src="./img/samsung-uk-YFLh6DV3hsk-unsplash.jpg" class="card-img-top" alt="Random Images">
                     <div class="card-body">
-                      <h5 class="card-title">Our Commitment</h5>
+                      <h5 class="card-title" style="color: rgb(245, 135, 253)">Our Commitment</h5>
                       <h6 class="card-subtitle mb-2 text-muted">We believe in you</h6>
                       <p class="card-text">
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem odio officia libero. 
@@ -197,22 +199,80 @@
 
     <div class="bg-dark text-light py-5">
         <div class="container">
-            <div class="row py-5 my-5">
-                <div class="col-xs-6 col-lg-3">
+            <div class="row py-5 align-items-start">
+                <!-- one -->
+                <div class="col-xs-6 col-lg-3 py-5 my-5">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta facilis veritatis quas. 
                     Possimus error laborum quae vitae consequatur aspernatur ad?
                 </div>
-                <div class="col-xs-6 col-lg-3">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta facilis veritatis quas. 
-                    Possimus error laborum quae vitae consequatur aspernatur ad?
+                <!-- two -->
+                <div class="col-xs-6 col-lg-3 py-5">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                          <a class="nav-link active text-light text-light" aria-current="page" href="#">Beckoning</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link text-light" href="#">Casual Leave</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link text-light" href="#">Altomet</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link text-light">Tanko Dumm</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light">Every Match</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light">Search Out Well</a>
+                        </li>
+                      </ul>
                 </div>
-                <div class="col-xs-6 col-lg-3">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta facilis veritatis quas. 
-                    Possimus error laborum quae vitae consequatur aspernatur ad?
+                <!-- three -->
+                <div class="col-xs-6 col-lg-3 py-5">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                          <a class="nav-link text-light active" aria-current="page" href="#">Calculus</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link text-light" href="#">Mastholin</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link text-light" href="#">Ash Location</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link text-light disabled" href="#" tabindex="-1" aria-disabled="true">Dislocastion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light">Force Facelot</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light">Search Out Well</a>
+                        </li>
+                      </ul>
                 </div>
-                <div class="col-xs-6 col-lg-3">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta facilis veritatis quas. 
-                    Possimus error laborum quae vitae consequatur aspernatur ad?
+                <!-- four -->
+                <div class="col-xs-6 col-lg-3 py-5">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                          <a class="nav-link text-light active" aria-current="page" href="#">Questions</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link text-light" href="#">Inkoroe</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link text-light" href="#">Launch Out</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link text-light">Moody</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light">Force Facelot</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light">Search Out Well</a>
+                        </li>
+                      </ul>
                 </div>
             </div>
         </div>
