Added social icons to the footer section of the page

--- a/index.html
+++ b/index.html
@@ -199,14 +199,22 @@
 
     <div class="bg-dark text-light py-5">
         <div class="container">
-            <div class="row py-5 align-items-start">
+            <div class="row py-5 border-bottom border-top border-light">
                 <!-- one -->
-                <div class="col-xs-6 col-lg-3 py-5 my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta facilis veritatis quas. 
-                    Possimus error laborum quae vitae consequatur aspernatur ad?
+                <div class="col-6 col-sm-6 col-md-3 py-5 my-5">
+                    <div class="social">
+                        <a href="#" class="pe-3 text-light"><i class="fa fa-instagram"></i></a>
+                        <a href="#" class="pe-3 text-light"><i class="fa fa-twitter"></i></a>
+                        <a href="#" class="pe-3 text-light"><i class="fa fa-whatsapp"></i></a>
+                        <a href="#" class="pe-3 text-light"><i class="fa fa-linkedin"></i></a>
+                    </div>
+                    <div class="social-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta facilis veritatis quas. 
+                        Possimus error laborum quae vitae consequatur aspernatur ad?
+                    </div>
                 </div>
                 <!-- two -->
-                <div class="col-xs-6 col-lg-3 py-5">
+                <div class="col-6 col-sm-6 col-md-3 py-5">
                     <ul class="nav flex-column">
                         <li class="nav-item">
                           <a class="nav-link active text-light text-light" aria-current="page" href="#">Beckoning</a>
@@ -229,7 +237,7 @@
                       </ul>
                 </div>
                 <!-- three -->
-                <div class="col-xs-6 col-lg-3 py-5">
+                <div class="col-6 col-sm-6 col-md-3 py-5">
                     <ul class="nav flex-column">
                         <li class="nav-item">
                           <a class="nav-link text-light active" aria-current="page" href="#">Calculus</a>
@@ -252,7 +260,7 @@
                       </ul>
                 </div>
                 <!-- four -->
-                <div class="col-xs-6 col-lg-3 py-5">
+                <div class="col-6 col-sm-6 col-md-3 py-5">
                     <ul class="nav flex-column">
                         <li class="nav-item">
                           <a class="nav-link text-light active" aria-current="page" href="#">Questions</a>
