Adjusted the grid system on the footer contents

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a href="#" class="nav-link pe-5">Wellness</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Production Frameworks</a>
+                        <a href="#" class="nav-link">Frameworks</a>
                     </li>
                 </ul>
             </div>
